fix z-index issue

--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -1,5 +1,6 @@
 .navigation {
     position: fixed;
+    z-index: 100;
     right: 80px;
     top: 8px;
 }
